name:                persistent-transaction-weirdness
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/persistent-transaction-weirdness#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable persistent-transaction-weirdness
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , text
                     , unliftio
                     , string-class
                     , resource-pool
                     , transformers
                     , monad-logger
                     , interpolatedstring-perl6
                     , esqueleto
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-record-updates
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints
               -threaded
               -rtsopts
               -with-rtsopts=-N
               -O
               -ddump-to-file
               -ddump-splices

